This is @input and @output example  2

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,2 +1,4 @@
 <!-- <router-outlet></router-outlet> -->
- <app-parent1></app-parent1>
+ <!-- <app-parent1></app-parent1> -->
+<!-- <app-child2></app-child2> -->
+ <app-parent2></app-parent2>
