--- a/src/app/parent1/parent1.html
+++ b/src/app/parent1/parent1.html
@@ -1,5 +1,5 @@
-<h2>Parent Component</h2>
-<input type="text" [(ngModel)]="userName" placeholder="Enter user name" />
+<h2>Parent Component</h2><input type="text" [(ngModel)]="userName" placeholder="Enter user name" />
+
 <button (click)="OnClick()">Send</button>
 
 <hr>
