--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,7 @@
 <!-- <router-outlet></router-outlet> -->
  <!-- <app-parent1></app-parent1> -->
 <!-- <app-child2></app-child2> -->
- <app-parent2></app-parent2>
+
+ <app-parent2></app-parent2>  // this is example 2 
+
+   <app-parent-3></app-parent-3>
