Passing an object with @input + emit updated object

--- a/src/app/child1/child1.html
+++ b/src/app/child1/child1.html
@@ -5,7 +5,9 @@
 <ng-template #noData>
   <p>No data found</p>
 </ng-template> 
+
 <!-- we can simply this (or)
 //or-->
 
 <p *ngIf="username">Child says : Hello {{username}}</p>
+<p *ngIf="!username">No Data Found </p>
