--- a/src/app/parent1/parent1.html
+++ b/src/app/parent1/parent1.html
@@ -1,7 +1,9 @@
-<h2>Parent Component</h2><input type="text" [(ngModel)]="userName" placeholder="Enter user name" />
+<!-- <h2>Parent Component</h2><input type="text" [(ngModel)]="userName" placeholder="Enter user name" /> -->
+<h2>Parent Component</h2><input type="text" [(ngModel)]="enteredName" (keydown)="OnEnter($event)" placeholder="Enter user name" />
+
 
 <button (click)="OnClick()">Send</button>
 
 <hr>
 
-<app-child1 [username]="enteredName"></app-child1>
+<app-child1 [username]="userName"></app-child1>
