--- a/src/app/child-5/child-5.html
+++ b/src/app/child-5/child-5.html
@@ -9,6 +9,7 @@
 <br><br><br>
 
 <button  (click)="UpdateId()">Increase Id</button>
+<button (click)="UpdatesId()">Decrease Id</button>
 
 <br><br><br>
 
